--- a/IGD/en.lproj/MainStoryboard_iPad.storyboard
+++ b/IGD/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1552" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="IGDViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ltv-8v-eMC"/>
+                        <viewControllerLayoutGuide type="bottom" id="Uad-3G-c14"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="5">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <adBannerView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="999" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="mSh-W6-frR">
+                                <rect key="frame" x="0.0" y="958" width="480" height="66"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="480" id="SM0-2K-FxH"/>
                                     <constraint firstAttribute="height" constant="66" id="Y7H-BB-INN"/>
@@ -21,8 +27,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="mSh-W6-frR" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" type="default" id="gWa-Ea-CXn"/>
-                            <constraint firstItem="mSh-W6-frR" firstAttribute="leading" secondItem="5" secondAttribute="leading" type="default" id="r6q-rL-Tns"/>
+                            <constraint firstItem="mSh-W6-frR" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" id="gWa-Ea-CXn"/>
+                            <constraint firstItem="mSh-W6-frR" firstAttribute="leading" secondItem="5" secondAttribute="leading" id="r6q-rL-Tns"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -30,16 +36,8 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="IGDViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/IGDViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
+        <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
