--- a/IGD/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/IGD/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1552" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="IGDViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="O3Q-Y9-q66"/>
+                        <viewControllerLayoutGuide type="bottom" id="lNI-ji-Akt"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <adBannerView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="999" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="gmZ-Dq-uSk">
+                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="dIZ-TV-DYW"/>
                                 </constraints>
@@ -20,14 +26,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="gmZ-Dq-uSk" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="WKF-xI-sif"/>
-                            <constraint firstItem="gmZ-Dq-uSk" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="bWe-ni-O8Y"/>
-                            <constraint firstItem="gmZ-Dq-uSk" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="hMt-ZZ-wJx"/>
+                            <constraint firstItem="gmZ-Dq-uSk" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="WKF-xI-sif"/>
+                            <constraint firstItem="gmZ-Dq-uSk" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" id="bWe-ni-O8Y"/>
+                            <constraint firstItem="gmZ-Dq-uSk" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" id="hMt-ZZ-wJx"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="489" y="56"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
